--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleInternalWithInterDenyAllow/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleInternalWithInterDenyAllow/policies.yaml
@@ -209,8 +209,277 @@ spec:
     egress:
         - to:
             - ipBlock:
-                cidr: 0.0.0.0/0
-            - podSelector: {}
+                cidr: 0.0.0.0/5
+            - ipBlock:
+                cidr: 8.0.0.0/7
+            - ipBlock:
+                cidr: 10.0.0.0/31
+            - ipBlock:
+                cidr: 10.0.0.3/32
+            - ipBlock:
+                cidr: 10.0.0.4/30
+            - ipBlock:
+                cidr: 10.0.0.8/29
+            - ipBlock:
+                cidr: 10.0.0.16/28
+            - ipBlock:
+                cidr: 10.0.0.32/27
+            - ipBlock:
+                cidr: 10.0.0.64/27
+            - ipBlock:
+                cidr: 10.0.0.96/30
+            - ipBlock:
+                cidr: 10.0.0.102/31
+            - ipBlock:
+                cidr: 10.0.0.104/29
+            - ipBlock:
+                cidr: 10.0.0.112/28
+            - ipBlock:
+                cidr: 10.0.0.128/25
+            - ipBlock:
+                cidr: 10.0.1.2/31
+            - ipBlock:
+                cidr: 10.0.1.4/30
+            - ipBlock:
+                cidr: 10.0.1.8/29
+            - ipBlock:
+                cidr: 10.0.1.16/28
+            - ipBlock:
+                cidr: 10.0.1.32/27
+            - ipBlock:
+                cidr: 10.0.1.64/26
+            - ipBlock:
+                cidr: 10.0.1.128/25
+            - ipBlock:
+                cidr: 10.0.2.0/23
+            - ipBlock:
+                cidr: 10.0.4.0/22
+            - ipBlock:
+                cidr: 10.0.8.0/21
+            - ipBlock:
+                cidr: 10.0.16.0/20
+            - ipBlock:
+                cidr: 10.0.32.0/19
+            - ipBlock:
+                cidr: 10.0.64.0/18
+            - ipBlock:
+                cidr: 10.0.128.0/17
+            - ipBlock:
+                cidr: 10.1.0.0/16
+            - ipBlock:
+                cidr: 10.2.0.0/15
+            - ipBlock:
+                cidr: 10.4.0.0/14
+            - ipBlock:
+                cidr: 10.8.0.0/13
+            - ipBlock:
+                cidr: 10.16.0.0/12
+            - ipBlock:
+                cidr: 10.32.0.0/11
+            - ipBlock:
+                cidr: 10.64.0.0/10
+            - ipBlock:
+                cidr: 10.128.0.0/10
+            - ipBlock:
+                cidr: 10.192.0.0/11
+            - ipBlock:
+                cidr: 10.224.0.0/12
+            - ipBlock:
+                cidr: 10.240.0.0/13
+            - ipBlock:
+                cidr: 10.248.0.0/15
+            - ipBlock:
+                cidr: 10.250.0.0/24
+            - ipBlock:
+                cidr: 10.250.1.2/31
+            - ipBlock:
+                cidr: 10.250.1.4/30
+            - ipBlock:
+                cidr: 10.250.1.8/29
+            - ipBlock:
+                cidr: 10.250.1.16/28
+            - ipBlock:
+                cidr: 10.250.1.32/27
+            - ipBlock:
+                cidr: 10.250.1.64/26
+            - ipBlock:
+                cidr: 10.250.1.128/25
+            - ipBlock:
+                cidr: 10.250.2.0/23
+            - ipBlock:
+                cidr: 10.250.4.0/22
+            - ipBlock:
+                cidr: 10.250.8.0/21
+            - ipBlock:
+                cidr: 10.250.16.0/20
+            - ipBlock:
+                cidr: 10.250.32.0/19
+            - ipBlock:
+                cidr: 10.250.64.0/18
+            - ipBlock:
+                cidr: 10.250.128.0/17
+            - ipBlock:
+                cidr: 10.251.0.0/16
+            - ipBlock:
+                cidr: 10.252.0.0/14
+            - ipBlock:
+                cidr: 11.0.0.0/8
+            - ipBlock:
+                cidr: 12.0.0.0/6
+            - ipBlock:
+                cidr: 16.0.0.0/4
+            - ipBlock:
+                cidr: 32.0.0.0/3
+            - ipBlock:
+                cidr: 64.0.0.0/2
+            - ipBlock:
+                cidr: 128.0.0.0/3
+            - ipBlock:
+                cidr: 160.0.0.0/5
+            - ipBlock:
+                cidr: 168.0.0.0/6
+            - ipBlock:
+                cidr: 172.0.0.0/12
+            - ipBlock:
+                cidr: 172.16.0.0/21
+            - ipBlock:
+                cidr: 172.16.8.0/23
+            - ipBlock:
+                cidr: 172.16.10.0/29
+            - ipBlock:
+                cidr: 172.16.10.8/31
+            - ipBlock:
+                cidr: 172.16.10.11/32
+            - ipBlock:
+                cidr: 172.16.10.12/30
+            - ipBlock:
+                cidr: 172.16.10.16/28
+            - ipBlock:
+                cidr: 172.16.10.32/27
+            - ipBlock:
+                cidr: 172.16.10.64/26
+            - ipBlock:
+                cidr: 172.16.10.128/25
+            - ipBlock:
+                cidr: 172.16.11.0/24
+            - ipBlock:
+                cidr: 172.16.12.0/22
+            - ipBlock:
+                cidr: 172.16.16.0/20
+            - ipBlock:
+                cidr: 172.16.32.0/19
+            - ipBlock:
+                cidr: 172.16.64.0/18
+            - ipBlock:
+                cidr: 172.16.128.0/17
+            - ipBlock:
+                cidr: 172.17.0.0/16
+            - ipBlock:
+                cidr: 172.18.0.0/15
+            - ipBlock:
+                cidr: 172.20.0.0/14
+            - ipBlock:
+                cidr: 172.24.0.0/13
+            - ipBlock:
+                cidr: 172.32.0.0/11
+            - ipBlock:
+                cidr: 172.64.0.0/10
+            - ipBlock:
+                cidr: 172.128.0.0/9
+            - ipBlock:
+                cidr: 173.0.0.0/8
+            - ipBlock:
+                cidr: 174.0.0.0/7
+            - ipBlock:
+                cidr: 176.0.0.0/4
+            - ipBlock:
+                cidr: 192.0.0.0/9
+            - ipBlock:
+                cidr: 192.128.0.0/11
+            - ipBlock:
+                cidr: 192.160.0.0/13
+            - ipBlock:
+                cidr: 192.168.0.1/32
+            - ipBlock:
+                cidr: 192.168.0.2/31
+            - ipBlock:
+                cidr: 192.168.0.4/30
+            - ipBlock:
+                cidr: 192.168.0.8/29
+            - ipBlock:
+                cidr: 192.168.0.16/28
+            - ipBlock:
+                cidr: 192.168.0.32/27
+            - ipBlock:
+                cidr: 192.168.0.64/26
+            - ipBlock:
+                cidr: 192.168.0.128/25
+            - ipBlock:
+                cidr: 192.168.1.0/24
+            - ipBlock:
+                cidr: 192.168.2.0/23
+            - ipBlock:
+                cidr: 192.168.4.0/22
+            - ipBlock:
+                cidr: 192.168.8.0/21
+            - ipBlock:
+                cidr: 192.168.16.0/20
+            - ipBlock:
+                cidr: 192.168.32.0/19
+            - ipBlock:
+                cidr: 192.168.64.0/18
+            - ipBlock:
+                cidr: 192.168.128.0/18
+            - ipBlock:
+                cidr: 192.168.192.0/19
+            - ipBlock:
+                cidr: 192.168.224.0/20
+            - ipBlock:
+                cidr: 192.168.240.0/21
+            - ipBlock:
+                cidr: 192.168.248.0/22
+            - ipBlock:
+                cidr: 192.168.252.0/23
+            - ipBlock:
+                cidr: 192.168.254.0/24
+            - ipBlock:
+                cidr: 192.168.255.1/32
+            - ipBlock:
+                cidr: 192.168.255.2/31
+            - ipBlock:
+                cidr: 192.168.255.4/30
+            - ipBlock:
+                cidr: 192.168.255.8/29
+            - ipBlock:
+                cidr: 192.168.255.16/28
+            - ipBlock:
+                cidr: 192.168.255.32/27
+            - ipBlock:
+                cidr: 192.168.255.64/26
+            - ipBlock:
+                cidr: 192.168.255.128/25
+            - ipBlock:
+                cidr: 192.169.0.0/16
+            - ipBlock:
+                cidr: 192.170.0.0/15
+            - ipBlock:
+                cidr: 192.172.0.0/14
+            - ipBlock:
+                cidr: 192.176.0.0/12
+            - ipBlock:
+                cidr: 192.192.0.0/10
+            - ipBlock:
+                cidr: 193.0.0.0/8
+            - ipBlock:
+                cidr: 194.0.0.0/7
+            - ipBlock:
+                cidr: 196.0.0.0/6
+            - ipBlock:
+                cidr: 200.0.0.0/5
+            - ipBlock:
+                cidr: 208.0.0.0/4
+            - ipBlock:
+                cidr: 224.0.0.0/3
     podSelector:
         matchExpressions:
             - key: VMs_within_IPs__172.16.10.10-16
