--- a/pkg/synthesis/tests_expected_output/k8s_resources/Example1dExternalWithSegments_NoHint/pods.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/Example1dExternalWithSegments_NoHint/pods.yaml
@@ -5,6 +5,7 @@ metadata:
     labels:
         VMs_within_IPs__0.0.1.0-25: "true"
         group__default-group: "true"
+        in_Segment__seg_a_and_b: "true"
     name: A
     namespace: seg_a_and_b
 spec:
@@ -18,6 +19,7 @@ metadata:
     labels:
         VMs_within_IPs__0.0.1.128-25: "true"
         group__default-group: "true"
+        in_Segment__seg_a_and_b: "true"
     name: B
     namespace: seg_a_and_b
 spec:
@@ -31,6 +33,7 @@ metadata:
     labels:
         VMs_within_IPs__0.0.2.0-24: "true"
         group__default-group: "true"
+        in_Segment__seg_c: "true"
     name: C-no-address
     namespace: seg_c
 spec:
