--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHintsDisjoint_NoHint_NoHint/pods.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHintsDisjoint_NoHint_NoHint/pods.yaml
@@ -16,6 +16,7 @@ metadata:
     creationTimestamp: null
     labels:
         group__Hufflepuff: "true"
+        group__Not-NLCSlytherin: "true"
     name: Hufflepuff
     namespace: default
 spec:
@@ -28,6 +29,7 @@ metadata:
     creationTimestamp: null
     labels:
         group__Gryffindor: "true"
+        group__Not-NLCSlytherin: "true"
     name: Gryffindor
     namespace: default
 spec:
@@ -40,6 +42,7 @@ metadata:
     creationTimestamp: null
     labels:
         group__Dumbledore1: "true"
+        group__Not-NLCSlytherin: "true"
     name: Dumbledore1
     namespace: default
 spec:
@@ -52,6 +55,7 @@ metadata:
     creationTimestamp: null
     labels:
         group__Dumbledore2: "true"
+        group__Not-NLCSlytherin: "true"
     name: Dumbledore2
     namespace: default
 spec:
