--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleInternalWithInterDenyAllowMixedSegments/pods.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleInternalWithInterDenyAllowMixedSegments/pods.yaml
@@ -23,6 +23,7 @@ metadata:
         VMs_within_IPs__10.0.0.0-20: "true"
         VMs_within_IPs__10.0.0.0-24: "true"
         group__default-group: "true"
+        in_Segment__seg_2-3: "true"
     name: vm2
     namespace: seg_2-3
 spec:
@@ -38,6 +39,7 @@ metadata:
         VMs_within_IPs__10.0.0.0-20: "true"
         VMs_within_IPs__10.0.0.0-24: "true"
         group__default-group: "true"
+        in_Segment__seg_2-3: "true"
     name: vm3
     namespace: seg_2-3
 spec:
@@ -52,6 +54,7 @@ metadata:
         VMs_within_IPs__10.0.0.0-16: "true"
         VMs_within_IPs__10.0.0.0-20: "true"
         group__default-group: "true"
+        in_Segment__seg_4-5: "true"
     name: vm4
     namespace: seg_4-5
 spec:
@@ -66,6 +69,7 @@ metadata:
         VMs_within_IPs__10.0.0.0-16: "true"
         VMs_within_IPs__10.0.0.0-20: "true"
         group__default-group: "true"
+        in_Segment__seg_4-5: "true"
     name: vm5
     namespace: seg_4-5
 spec:
@@ -78,6 +82,7 @@ metadata:
     creationTimestamp: null
     labels:
         group__default-group: "true"
+        in_Segment__seg-6-7: "true"
     name: vm6
     namespace: seg-6-7
 spec:
@@ -90,6 +95,7 @@ metadata:
     creationTimestamp: null
     labels:
         group__default-group: "true"
+        in_Segment__seg-6-7: "true"
     name: vm7
     namespace: seg-6-7
 spec:
