--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleInternalWithInterDenyAllowWithSegments/pods.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleInternalWithInterDenyAllowWithSegments/pods.yaml
@@ -8,6 +8,7 @@ metadata:
         VMs_within_IPs__10.0.0.0-24: "true"
         VMs_within_IPs__10.0.0.0-30: "true"
         group__default-group: "true"
+        in_Segment__seg_1: "true"
     name: vm1
     namespace: seg_1
 spec:
@@ -23,6 +24,7 @@ metadata:
         VMs_within_IPs__10.0.0.0-20: "true"
         VMs_within_IPs__10.0.0.0-24: "true"
         group__default-group: "true"
+        in_Segment__seg_2-3: "true"
     name: vm2
     namespace: seg_2-3
 spec:
@@ -38,6 +40,7 @@ metadata:
         VMs_within_IPs__10.0.0.0-20: "true"
         VMs_within_IPs__10.0.0.0-24: "true"
         group__default-group: "true"
+        in_Segment__seg_2-3: "true"
     name: vm3
     namespace: seg_2-3
 spec:
@@ -52,6 +55,7 @@ metadata:
         VMs_within_IPs__10.0.0.0-16: "true"
         VMs_within_IPs__10.0.0.0-20: "true"
         group__default-group: "true"
+        in_Segment__seg_4-5: "true"
     name: vm4
     namespace: seg_4-5
 spec:
@@ -66,6 +70,7 @@ metadata:
         VMs_within_IPs__10.0.0.0-16: "true"
         VMs_within_IPs__10.0.0.0-20: "true"
         group__default-group: "true"
+        in_Segment__seg_4-5: "true"
     name: vm5
     namespace: seg_4-5
 spec:
@@ -79,6 +84,7 @@ metadata:
     labels:
         VMs_within_IPs__10.0.0.0-16: "true"
         group__default-group: "true"
+        in_Segment__seg-6-7: "true"
     name: vm6
     namespace: seg-6-7
 spec:
@@ -92,6 +98,7 @@ metadata:
     labels:
         VMs_within_IPs__10.0.0.0-16: "true"
         group__default-group: "true"
+        in_Segment__seg-6-7: "true"
     name: vm7
     namespace: seg-6-7
 spec:
@@ -105,6 +112,7 @@ metadata:
     labels:
         VMs_within_IPs__172.16.10.10-16: "true"
         group__default-group: "true"
+        in_Segment__seg-8: "true"
     name: vm8
     namespace: seg-8
 spec:
@@ -118,6 +126,7 @@ metadata:
     labels:
         VMs_within_IPs__192.168.0.0-16: "true"
         group__default-group: "true"
+        in_Segment__seg-9-10: "true"
     name: vm9
     namespace: seg-9-10
 spec:
@@ -131,6 +140,7 @@ metadata:
     labels:
         VMs_within_IPs__192.168.0.0-16: "true"
         group__default-group: "true"
+        in_Segment__seg-9-10: "true"
     name: vm10
     namespace: seg-9-10
 spec:
